tests/baselines/reference/constructorReturnsInvalidType.errors.txt
==== tests/cases/compiler/constructorReturnsInvalidType.ts (1 errors) ====
    class X {
        constructor() {
            return 1;
                   ~
!!! error TS2409: Return type of constructor signature must be assignable to the instance type of the class
        }
        foo() { }
    }
     
    var x = new X();
    